// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge/Default matches snapshot 1`] = `
<div>
  <div
    class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-hidden focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground shadow-sm hover:bg-primary/80"
  >
    Badge
  </div>
</div>
`;

exports[`Badge/Destructive matches snapshot 1`] = `
<div>
  <div
    class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-hidden focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground shadow-sm hover:bg-destructive/80"
  >
    Destructive
  </div>
</div>
`;

exports[`Badge/Outline matches snapshot 1`] = `
<div>
  <div
    class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-hidden focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
  >
    Outline
  </div>
</div>
`;

exports[`Badge/Secondary matches snapshot 1`] = `
<div>
  <div
    class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-hidden focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
  >
    Secondary
  </div>
</div>
`;
